# Software_Engineer_91.411_2

./: README.md
2_DataAggregator/Code/kinect_app/: README.md  README.md~
2_DataAggregator/Code/kinect_app/app_node/: CMakeLists.txt  package.xml
2_DataAggregator/Code/kinect_app/app_node/doc/: PlaceHolder.txt
2_DataAggregator/Code/kinect_app/app_node/launch/: prototype_ui.launch
2_DataAggregator/Code/kinect_app/app_node/qss/: Styles.json
2_DataAggregator/Code/kinect_app/app_node/scripts/: ImageViewDepth.bash  ImageViewRgb.bash  Install.bash  Install.bash~  Ros_Install.bash  Ros_Install.bash~  SoftEng.desktop
2_DataAggregator/Code/kinect_app/app_node/src/: AddDeviceGui.h  AddUserGui.h  AddUserGui.h~  AppStyles.tcc  AppStyles.tcc~  CenterGui.cpp  CenterGui.h  Coder.h~  Device.h  Device.h~  DeviceAbstractGui.cpp  DeviceAbstractGui.h  DeviceAbstractGui.h~  DevicesGui.cpp  DevicesGui.h  DevicesGui.h~  Frame3D.cpp  Frame3D.h  Frame3D.h~  HelpGui.cpp  HelpGui.h  HelpGui.h~  HistoryGui.cpp  HistoryGui.h~  JsonParser.h~  LocalDBMaster.cpp  LocalDBMaster.h~  LoginGui.cpp  LoginGui.h  LoginGui.h~  MasterGui.cpp  MasterGui.h  MasterGui.h~  Menu.h  ModifyDeviceGui.cpp  ModifyDeviceGui.h  ModifyDeviceGui.h~  OpeningGui.cpp  OpeningGui.h  ResultsGui.cpp  (+18 more)
2_DataAggregator/Code/kinect_app/doc/: Doxyfile  doxygen_log.txt
2_DataAggregator/Code/kinect_app/doc/html/: _accelerometer_sim_8cpp.html  _accelerometer_sim_8cpp_source.html  _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _frame3_d_8cpp.html  _frame3_d_8cpp_source.html  _frame3_d_8h.html  _frame3_d_8h_source.html  _image_sim_8cpp.html  _image_sim_8cpp_source.html  _magnetometer_sim_8cpp.html  _magnetometer_sim_8cpp_source.html  _manage_node_status_8cpp.html  _manage_node_status_8cpp_source.html  _manage_node_status_8h.html  _manage_node_status_8h_source.html  _point_cloud2_sim_8cpp.html  _point_cloud2_sim_8cpp_source.html  _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  _respond_8cpp.html  _respond_8cpp_source.html  _respond_8h.html  _respond_8h_source.html  _t_o_d_o_8md.html  _t_o_d_o_8md_source.html  annotated.html  app__node_2src_2_add_device_gui_8cpp.html  app__node_2src_2_add_device_gui_8cpp_source.html  app__node_2src_2_add_device_gui_8h.html  app__node_2src_2_add_device_gui_8h_source.html  app__node_2src_2_add_user_gui_8cpp.html  app__node_2src_2_add_user_gui_8cpp_source.html  app__node_2src_2_add_user_gui_8h.html  app__node_2src_2_add_user_gui_8h_source.html  app__node_2src_2_app_styles_8h.html  app__node_2src_2_app_styles_8h_source.html  app__node_2src_2_center_gui_8cpp.html  (+343 more)
2_DataAggregator/Code/kinect_app/doc/latex/: _accelerometer_sim_8cpp.tex  _c_make_c_compiler_id_8c.tex  _c_make_c_x_x_compiler_id_8cpp.tex  _frame3_d_8cpp.tex  _frame3_d_8h.tex  _image_sim_8cpp.tex  _magnetometer_sim_8cpp.tex  _manage_node_status_8cpp.tex  _manage_node_status_8h.tex  _point_cloud2_sim_8cpp.tex  _r_e_a_d_m_e_8md.tex  _respond_8cpp.tex  _respond_8h.tex  _t_o_d_o_8md.tex  annotated.tex  app__node_2src_2_add_device_gui_8cpp.tex  app__node_2src_2_add_device_gui_8h.tex  app__node_2src_2_add_user_gui_8cpp.tex  app__node_2src_2_add_user_gui_8h.tex  app__node_2src_2_app_styles_8h.tex  app__node_2src_2_center_gui_8cpp.tex  app__node_2src_2_center_gui_8h.tex  app__node_2src_2_coder_8cpp.tex  app__node_2src_2_coder_8h.tex  app__node_2src_2_device_8cpp.tex  app__node_2src_2_device_8h.tex  app__node_2src_2_device_abstract_gui_8cpp.tex  app__node_2src_2_device_abstract_gui_8h.tex  app__node_2src_2_devices_gui_8cpp.tex  app__node_2src_2_devices_gui_8h.tex  app__node_2src_2_help_gui_8cpp.tex  app__node_2src_2_help_gui_8h.tex  app__node_2src_2_history_gui_8cpp.tex  app__node_2src_2_history_gui_8h.tex  app__node_2src_2_json_parser_8cpp.tex  app__node_2src_2_json_parser_8h.tex  app__node_2src_2_local_d_b_master_8cpp.tex  app__node_2src_2_local_d_b_master_8h.tex  app__node_2src_2_login_gui_8cpp.tex  (+159 more)
2_DataAggregator/Code/kinect_app/local_db_node/: CMakeLists.txt  package.xml
2_DataAggregator/Code/kinect_app/remote_db_node/: CMakeLists.txt  package.xml
2_DataAggregator/Code/kinect_app/sensor_admin_NB/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  sandbox.txt  se_logo.xpm
2_DataAggregator/Code/kinect_app/sensor_admin_NB/doc/: PlaceHolder.txt
2_DataAggregator/Code/kinect_app/sensor_admin_NB/nbproject/: configurations.xml  project.xml
2_DataAggregator/Code/kinect_app/sensor_admin_NB/nbproject/private/: Default.properties  configurations.xml
2_DataAggregator/Code/kinect_app/sensor_admin_NB/qss/: Classic.qss  Dark_Metal.qss  Peach_Puff.qss  Transparent.qss
2_DataAggregator/Code/kinect_app/sensor_admin_NB/src/: AddDeviceGui.cpp  AddDeviceGui.h  AddDeviceGui.h~  AddUserGui.cpp  AddUserGui.h  AppStyles.h  AppStyles.h~  AppStyles.tcc  AppStyles.tcc~  CenterGui.h  CenterGui.h~  Coder.cpp  Coder.h  Device.cpp  Device.h  DeviceAbstractGui.h  DeviceAbstractGui.h~  DevicesGui.h  DevicesGui.h~  HelpGui.cpp  HelpGui.h  HistoryGui.h  JsonParser.cpp  JsonParser.h  LocalDBMaster.h  LocalDBMaster.h~  LoginGui.cpp  LoginGui.h  MasterGui.cpp  MasterGui.h  Menu.cpp  Menu.h  Menu.h~  ModifyDeviceGui.h  ModifyUserGui.cpp  ModifyUserGui.h  ModifyUserGui.h~  OpeningGui.cpp  OpeningGui.h  OpeningGui.h~  (+15 more)
2_DataAggregator/Code/kinect_app/sensor_node/: CMakeLists.txt  package.xml
2_DataAggregator/Code/kinect_app/speech_node/: CMakeLists.txt  package.xml
2_DataAggregator/Code/pebble_smartwatch_app/: README.md  appinfo.json
2_DataAggregator/Code/pebble_smartwatch_app/src/: feature_accel_discs.c
3_Cloud/Code/: account.php  authorize.php  config.php  db_schema.sql  device.php  index.php  login.php  logout.php  register.php
3_Cloud/Code/admin/: account.php  index.php  login.php  logout.php  register.php
3_Cloud/Code/admin/includes/: navigation.php  sidebar.right.php
3_Cloud/Code/includes/: getprovider.php  navigation.php  sidebar.right.php  template.txt
3_Cloud/Code/templates/main/: footer.php  header.php  style.css
(+136 files in other folders)
